FIX Pull 10370 into 8.2RC - geographical search spacing

--- a/css/global.css
+++ b/css/global.css
@@ -1318,3 +1318,14 @@ a.Enabled, a:visited.Enabled {
 .checkselect {float:left;padding-left:5px;}
 
 .ResourcePanelResourceID {float:left;}
+
+
+.ReportSheet {padding:10px;}
+.ReportSummary td {padding:10px;}
+.ReportMetric {font-size:200%;padding-left:5px;}
+.ReportAddToDash {font-size:65%;}
+
+#modal #CentralSpaceResources {padding:20px;} /* extra spacing needed when results displayed in a modal - e.g. geographical search */
+
+
+
